Update Permalink + add dark mode preventor

--- a/learn/Project-Calculator/style.css
+++ b/learn/Project-Calculator/style.css
@@ -7,6 +7,8 @@
     -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+    color-scheme: dark;
+    
 }
 
 body {
