--- a/learn/Project-EtchASketch/style.css
+++ b/learn/Project-EtchASketch/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barriecito&display=swap');
+:root {
+    color-scheme: dark;
+}
+
 body{
     font-family: "Barriecito", serif;
     font-weight: 700;
