--- a/learn/Project-Recipes/style.css
+++ b/learn/Project-Recipes/style.css
@@ -1,6 +1,8 @@
 *{
     font-family: "Roboto", sans-serif;
     border-radius: 8px;
+    color-scheme: dark;
+    
 }
 ol{
     margin: 0px;
