--- a/learn/Project-RevisitRockPaperScissors/style.css
+++ b/learn/Project-RevisitRockPaperScissors/style.css
@@ -1,3 +1,7 @@
+:root {
+    color-scheme: dark;
+}
+
 body{
     display: flex;
     justify-content: center;
